<resources>
    <string name="app_name">ToDoList</string>
    <string name="export">Eksport zadań</string>
    <string name="task">Zarządzanie zadaniami</string>
    <string name="taskLists">Lista zadań</string>
    <string name="nameTask">Nazwa zadania</string>
    <string name="priorityTask">Priorytet</string>
    <string name="statusTask">Status</string>
    <string name="dateFinished">Data ukończenia (dd/mm/yyyy - hh:mm)</string>
    <string name="add">Dodaj</string>
    <string name="edit">Edytuj</string>
    <string name="sort">Sortuj wg:</string>
    <string name="sortP">Priorytetu</string>
    <string name="sortS">Statusu</string>
    <string name="sortAD">Daty dodania</string>
    <string name="sortFD">Daty ukończenia</string>
    <string name="sortN">Nazwy</string>
    <string name="updated">Zadanie zostało zakutalizowane.</string>
    <string name="deleted">Zadanie zostało usunięte.</string>
    <string name="deletedAttachment">Załącznik został usunięty.</string>
    <string name="delete">Usuń</string>
    <string name="confirm">Jesteś pewny?</string>
    <string name="confirmDeleteAttachment">Załącznik zostanie usunięty. Jesteś pewny?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="invalidData">Wprowadzono niepoprawne dane!</string>
    <string name="addedTask">Zadanie zostało dodane!</string>
    <string name="camera">Zrób zdjęcie</string>
    <string name="movie">Nagraj film</string>
    <string name="cameraError">Nie masz odpowiednich uprawnień. Zresetuj aplikację.</string>
    <string name="exportedListSuccessful">Lista została wyeksportowana do pliku lista.txt.</string>
    <string name="tasksAfterTime">Lista zadań po terminie:</string>
    <string name="tasksToday">Lista zadań na dzisiaj:</string>
    <string name="name">Nazwa</string>
    <string name="priority">priorytet</string>
    <string name="date">data</string>
    <string name="show">Wyświetl</string>
    <string name="showAttachments">Wyświetl załączniki</string>
    <string name="addAttachments">Dodaj załączniki</string>
</resources>
